<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.story.PostStoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp">


        <TextView
            android:id="@+id/tvUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:textColor="@color/black"
            tools:text="@string/share_story_as"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivShowImage"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginTop="24dp"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="@+id/tvUser"
            app:layout_constraintStart_toStartOf="@+id/tvUser"
            app:layout_constraintTop_toBottomOf="@+id/tvUser"
            app:srcCompat="@drawable/ic_insert_photo" />

        <Button
            android:id="@+id/btnCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/purple_500"
            android:text="@string/btn_camera"
            app:layout_constraintEnd_toStartOf="@+id/btnGallery"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/ivShowImage"
            app:layout_constraintTop_toBottomOf="@+id/ivShowImage" />

        <Button
            android:id="@+id/btnGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/purple_500"
            android:text="@string/btn_gallery"
            app:layout_constraintEnd_toEndOf="@+id/ivShowImage"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnCamera"
            app:layout_constraintTop_toBottomOf="@+id/ivShowImage" />

        <LinearLayout
            android:id="@+id/linearLayoutLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/edDescription"
            app:layout_constraintEnd_toEndOf="@+id/ivShowImage"
            app:layout_constraintStart_toStartOf="@+id/ivShowImage"
            app:layout_constraintTop_toBottomOf="@+id/btnCamera">

        <ImageView
            android:id="@+id/ivLocationIcon"
            android:layout_width="37dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:contentDescription="@string/icon_map_pin"
            app:srcCompat="@drawable/ic_location_pin" />

        <TextView
            android:id="@+id/tvChooseLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:maxLines="3"
            android:text="@string/choose_your_location" />

        </LinearLayout>

        <EditText
            android:id="@+id/edDescription"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginTop="32dp"
            android:autofillHints="Description"
            android:background="@drawable/desc_border"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:maxHeight="180dp"
            android:maxLines="8"
            android:padding="15dp"
            android:textSize="16sp"
            android:hint="Write your description here."
            app:layout_constraintEnd_toEndOf="@+id/ivShowImage"
            app:layout_constraintStart_toStartOf="@+id/ivShowImage"
            app:layout_constraintTop_toBottomOf="@+id/btnCamera"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/btnUploadYourStory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/share_button"
            android:backgroundTint="@color/purple_500"
            app:layout_constraintEnd_toEndOf="@+id/edDescription"
            app:layout_constraintStart_toStartOf="@+id/edDescription"
            app:layout_constraintTop_toBottomOf="@+id/edDescription" />

        <ProgressBar
            android:id="@+id/pbPostStory"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/ProgressBarStyleWhite"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/ivShowImage"
            app:layout_constraintEnd_toEndOf="@+id/ivShowImage"
            app:layout_constraintStart_toStartOf="@+id/ivShowImage"
            app:layout_constraintTop_toBottomOf="@+id/tvUser" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>